--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     max-width: 100%;
 }
 
@@ -298,7 +298,7 @@ nav {
     margin: 2% 0;
 }
 .top {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     border-bottom: 1px dashed black;
 }
 
@@ -319,6 +319,15 @@ nav {
 }
 .contentinfo div {
     width:47%;
-    margin:0 1%;
+    margin:3% 1%;
     border-bottom: 1px dashed black;
+}
+.information button {
+    margin: 3% 0 4% 0;
+    border-radius: 7px;
+    background-color: white;
+    padding:1% 3%;
+}
+.information h3 {
+    margin-top: 2%;
 }
