--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ header {
     width:20%;
 }
 .nav {
-    display:flex;
+    /* display:flex; */
     width:80%;
     margin-top: 3%;
 }
@@ -93,6 +93,7 @@ header {
     /* margin-right: 13%; */
     font-size: 14px;
     text-decoration: none;
+    color:black;
 }
 nav {
     display: flex;
@@ -288,6 +289,7 @@ header {
     /* margin-right: 13%; */
     font-size: 14px;
     text-decoration: none;
+    color: black;
 }
 nav {
     display: flex;
@@ -308,8 +310,6 @@ nav {
     padding-bottom: 20px;  
 }
 .middleabout {
-    display:flex;
-    flex-wrap:wrap;
     width:100%
 }
 .contentinfo {
@@ -326,7 +326,11 @@ nav {
     margin: 3% 0 4% 0;
     border-radius: 7px;
     background-color: white;
-    padding:1% 3%;
+    padding:1.5% 3%;
+}
+.information button a {
+    text-decoration: none;
+    color: black;
 }
 .information h3 {
     margin-top: 2%;
